--- a/angular.json
+++ b/angular.json
@@ -20,16 +20,8 @@
             "tsConfig": "tsconfig.app.json",
             "aot": false,
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [
-              "src/styles.css",
-              " node_modules/bootstrap/dist/css/bootstrap.min.css ",
-              " src/styles.scss "
-            ],
-            "scripts": [
-              " node_modules/jquery/dist/jquery.min.js ",
-              "node_modules/popper.js/dist/umd/popper.min.js",
-              " node_modules/bootstrap/dist/js/bootstrap.min.js "
-            ]
+            "styles": ["src/styles.css"],
+            "scripts": []
           },
           "configurations": {
             "production": {
